# JSON-Search-Engine-

./: .gitignore  AVLTree.h  CMakeLists.txt  Document_Parser.cpp  Document_Parser.h  Hahslers_AVLTree.h  Hash_Map.h  Index_Handler.cpp  Index_Handler.h  Query_Processor.cpp  Query_Processor.h  README.md  User_Interface.cpp  User_Interface.h  documentation.md  main.cpp  porter2_stemmer.cpp  porter2_stemmer.h  test_AVLTree.cpp
util/: hash.h  string_view.h
